# Cursos

HTML CSS/DIO/alight content/: index.html
HTML CSS/DIO/alight itens/: index.html
HTML CSS/DIO/alight-self/: index.html
HTML CSS/DIO/display-flex/: index.html
HTML CSS/DIO/flex/: index.html
HTML CSS/DIO/flex-direction/: index.html
HTML CSS/DIO/flex-grow/: index.html
HTML CSS/DIO/flex-wrap/: index.html
HTML CSS/DIO/flex/flex grow/: index.html
HTML CSS/DIO/flex/flex-basis/: index.html
HTML CSS/DIO/flex/flex-shrink/: index.html
HTML CSS/DIO/homenagem/: index.html  style.css
HTML CSS/DIO/justify-content/: index.html
HTML CSS/DIO/order/: index.html
HTML CSS/DIO/projeto/: index.html  style.css
JavaScript/aula 1/: index.js
JavaScript/aula 2/: index.html  index.js
JavaScript/aula 3/: index.js
JavaScript/aula 4/: index.js
Python Back End/: pyproject.toml
Python Back End/flask/src/: app.py  db.py  schema.sql
Python Back End/flask/src/controllers/: auth.py  role.py  user.py
Python Back End/flask/src/instance/: blog.sqlite
Python Back End/formator_data/: main.ipynb
Python Back End/separador_email/: main.ipynb
Python Back End/transformador_fahrenheit_para_celsius/: main.ipynb
